# wakatime-svg

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE_NOTES.md  action.yml  pyproject.toml
.github/workflows/: wakatime-svg.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
scripts/: generate-wakatime-svg.py
